Additional og tags added. Trying to fix linkedin issue (not showing the proper ulr tumbnail).

--- a/style/index.css
+++ b/style/index.css
@@ -38,7 +38,7 @@ html, body {
 @media (min-width: 769px) {
   .modal {
     left: 50%;
-    max-width: 770px;
+    max-width: 400px;
     transform: translateX(-50%);
   }
 }
